# pure-cv

./: .gitignore  Justfile  README.md  dev.ipynb  pyproject.toml  requirements.txt
pure-cv/: README.md  pyproject.toml
pure-cv/src/pure_cv/: __init__.py  __init__.pyi  boxes.py  colors.py  encoding.py  img_types.py  misc.py  opencv.py  plot.py  rescaling.py  rotation.py  types_.py
pure-cv/src/pure_cv/corners/: __init__.pyi  transform.py
pure-cv/src/pure_cv/draw/: __init__.py  draw.py
src/pure_cv/: __init__.py  encoding.py  misc.py
src/pure_cv/draw/: __init__.py
