[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-cv"
version = "0.1.3"
authors = [
    {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Purely functional tools for Python OpenCV "
dependencies = [
    "ramda",
    "numpy",
    "opencv-python",
    "matplotlib"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
